RTCEth/Import Declarations/Visual Basic/RTC4ethImport.bas

Declare Sub      set_input_pointer Lib "RTC4ethDLL.DLL" (ByVal pointer As Integer)
Declare Sub      n_list_call Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal position As Integer)
Declare Sub      list_call Lib "RTC4ethDLL.DLL" (ByVal position As Integer)
Declare Sub      n_list_return Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      list_return Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_z_out_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal z As Integer)
Declare Sub      z_out_list Lib "RTC4ethDLL.DLL" (ByVal z As Integer)
Declare Sub      n_set_standby_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal half_period As Integer, ByVal pulse As Integer)
Declare Sub      set_standby_list Lib "RTC4ethDLL.DLL" (ByVal half_period As Integer, ByVal pulse As Integer)
Declare Sub      n_timed_jump_abs Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal time As Double)
Declare Sub      timed_jump_abs Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal time As Double)
Declare Sub      n_timed_mark_abs Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal time As Double)
Declare Sub      timed_mark_abs Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal time As Double)
Declare Sub      n_timed_jump_rel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal time As Double)
Declare Sub      timed_jump_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer, ByVal time As Double)
Declare Sub      n_timed_mark_rel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal time As Double)
Declare Sub      timed_mark_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer, ByVal time As Double)
Declare Sub      n_set_laser_timing Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal halfperiod As Integer, ByVal pulse1 As Integer, ByVal pulse2 As Integer, ByVal timebase As Integer)
Declare Sub      set_laser_timing Lib "RTC4ethDLL.DLL" (ByVal halfperiod As Integer, ByVal pulse1 As Integer, ByVal pulse2 As Integer, ByVal timebase As Integer)
Declare Sub      n_set_wobbel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal amplitude As Integer, ByVal frequency As Double)
Declare Sub      set_wobbel Lib "RTC4ethDLL.DLL" (ByVal amplitude As Integer, ByVal frequency As Double)
Declare Sub      n_set_wobbel_xy Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal long_wob As Integer, ByVal trans_wob As Integer, ByVal frequency As Double)
Declare Sub      set_wobbel_xy Lib "RTC4ethDLL.DLL" (ByVal long_wob As Integer, ByVal trans_wob As Integer, ByVal frequency As Double)
Declare Sub      n_set_fly_x Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal kx As Double)
Declare Sub      set_fly_x Lib "RTC4ethDLL.DLL" (ByVal kx As Double)
Declare Sub      n_set_fly_y Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal ky As Double)
Declare Sub      set_fly_y Lib "RTC4ethDLL.DLL" (ByVal ky As Double)
Declare Sub      n_set_fly_rot Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal resolution As Double)
Declare Sub      set_fly_rot Lib "RTC4ethDLL.DLL" (ByVal resolution As Double)
Declare Sub      n_fly_return Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer)
Declare Sub      fly_return Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer)
Declare Sub      n_calculate_fly Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal direction As Integer, ByVal distance As Double)
Declare Sub      calculate_fly Lib "RTC4ethDLL.DLL" (ByVal direction As Integer, ByVal distance As Double)
Declare Sub      n_write_io_port_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_io_port_list Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_select_cor_table_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal heada As Integer, ByVal headb As Integer)
Declare Sub      select_cor_table_list Lib "RTC4ethDLL.DLL" (ByVal heada As Integer, ByVal headb As Integer)
Declare Sub      n_set_wait Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      set_wait Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_simulate_ext_start Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal delay As Integer, ByVal encoder As Integer)
Declare Sub      simulate_ext_start Lib "RTC4ethDLL.DLL" (ByVal delay As Integer, ByVal encoder As Integer)
Declare Sub      n_write_da_x_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal value As Integer)
Declare Sub      write_da_x_list Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal value As Integer)
Declare Sub      n_set_pixel_line Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal pixelmode As Integer, ByVal pixelperiod As Integer, ByVal dx As Double, ByVal dy As Double)
Declare Sub      set_pixel_line Lib "RTC4ethDLL.DLL" (ByVal pixelmode As Integer, ByVal pixelperiod As Integer, ByVal dx As Double, ByVal dy As Double)
Declare Sub      n_set_pixel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal pulswidth As Integer, ByVal davalue As Integer, ByVal adchannel As Integer)
Declare Sub      set_pixel Lib "RTC4ethDLL.DLL" (ByVal pulswidth As Integer, ByVal davalue As Integer, ByVal adchannel As Integer)
Declare Sub      n_set_extstartpos_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal position As Integer)
Declare Sub      set_extstartpos_list Lib "RTC4ethDLL.DLL" (ByVal position As Integer)
Declare Sub      n_laser_signal_on_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      laser_signal_on_list Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_laser_signal_off_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      laser_signal_off_list Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_set_firstpulse_killer_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal fpk As Integer)
Declare Sub      set_firstpulse_killer_list Lib "RTC4ethDLL.DLL" (ByVal fpk As Integer)
Declare Sub      n_set_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal mask_set As Integer)
Declare Sub      set_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal mask_set As Integer)
Declare Sub      n_clear_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal mask_clear As Integer)
Declare Sub      clear_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal mask_clear As Integer)
Declare Sub      n_list_jump_cond Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal position As Integer)
Declare Sub      list_jump_cond Lib "RTC4ethDLL.DLL" (ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal position As Integer)
Declare Sub      n_list_call_cond Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal position As Integer)
Declare Sub      list_call_cond Lib "RTC4ethDLL.DLL" (ByVal mask_1 As Integer, ByVal mask_0 As Integer, ByVal position As Integer)
Declare Function n_get_input_pointer Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_input_pointer Lib "RTC4ethDLL.DLL" () As Integer
Declare Function rtc4_max_cards Lib "RTC4ethDLL.DLL" () As Integer
Declare Sub      n_get_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer, busy As Integer, position As Integer)
Declare Sub      get_status Lib "RTC4ethDLL.DLL" (busy As Integer, position As Integer)
Declare Function n_read_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function read_status Lib "RTC4ethDLL.DLL" () As Integer
Declare Function n_get_startstop_info Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_startstop_info Lib "RTC4ethDLL.DLL" () As Integer
Declare Function n_get_marking_info Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_marking_info Lib "RTC4ethDLL.DLL" () As Integer
Declare Function get_dll_version Lib "RTC4ethDLL.DLL" () As Integer
Declare Sub      n_set_start_list_1 Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      set_start_list_1 Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_set_start_list_2 Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      set_start_list_2 Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_set_start_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal listno As Integer)
Declare Sub      set_start_list Lib "RTC4ethDLL.DLL" (ByVal listno As Integer)
Declare Sub      n_execute_list_1 Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      execute_list_1 Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_execute_list_2 Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      execute_list_2 Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_execute_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal listno As Integer)
Declare Sub      execute_list Lib "RTC4ethDLL.DLL" (ByVal listno As Integer)
Declare Sub      n_write_8bit_port Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_8bit_port Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_write_io_port Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_io_port Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Function n_eth_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Long
Declare Function eth_status Lib "RTC4ethDLL.DLL" () As Long
Declare Sub      n_auto_change Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      auto_change Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_auto_change_pos Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal start As Integer)
Declare Sub      auto_change_pos Lib "RTC4ethDLL.DLL" (ByVal start As Integer)
Declare Sub      aut_change Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_start_loop Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      start_loop Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_quit_loop Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      quit_loop Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_stop_execution Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      stop_execution Lib "RTC4ethDLL.DLL" ()
Declare Function n_read_io_port Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function read_io_port Lib "RTC4ethDLL.DLL" () As Integer
Declare Sub      n_write_da_1 Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_da_1 Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_write_da_2 Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_da_2 Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_set_max_counts Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal counts As Long)
Declare Sub      set_max_counts Lib "RTC4ethDLL.DLL" (ByVal counts As Long)
Declare Function n_get_counts Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Long
Declare Function get_counts Lib "RTC4ethDLL.DLL" () As Long
Declare Sub      n_set_matrix Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal m11 As Double, ByVal m12 As Double, ByVal m21 As Double, ByVal m22 As Double)
Declare Sub      set_matrix Lib "RTC4ethDLL.DLL" (ByVal m11 As Double, ByVal m12 As Double, ByVal m21 As Double, ByVal m22 As Double)
Declare Sub      n_set_offset Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal xoffset As Integer, ByVal yoffset As Integer)
Declare Sub      set_offset Lib "RTC4ethDLL.DLL" (ByVal xoffset As Integer, ByVal yoffset As Integer)
Declare Sub      n_goto_xyz Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal z As Integer)
Declare Sub      goto_xyz Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal z As Integer)
Declare Sub      n_goto_xy Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer)
